@@ -7,6 +7,7 @@ History
 Added
 
 * ``harmonic_mean()``
+* ``bayesian_classifier()``
 
 0.2.0 (2016-08-27)
 -----------
