@@ -7,6 +7,7 @@ TBD
 ### Added
 
 - `harmonic_mean()`
+- `bayesian_classfier()`
 
 ## 0.2.0
 
